--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "i18next": "^23.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.3",
     "react-responsive-carousel": "^3.2.23",
