--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "bootstrap": "^5.3.1",
     "firebase": "^10.1.0",
     "i18next": "^23.4.1",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-datepicker": "^4.16.0",
